# Soundry.Download

./: .dockerignore  .env.example  .gitignore  .railway.yml  CONTRIBUTING.md  COOKIES-HETZNER.md  COOLIFY.md  DATABASE.md  DEPLOYMENT.md  ENV.md  HETZNER.md  LICENSE  MIGRATION.md  QUICKSTART.md  RAILWAY.md  README.md  SCALING.md  deploy.sh  docker-compose.prod.yml  docker-compose.prod2.yml  docker-compose.yml  railway.json  railway.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  Dockerfile  components.json  package-lock.json  package.json
frontend-vue/: index.html  package-lock.json  package.json  tailwind.config.js
frontend-vue/src/: App.vue  config.js
frontend-vue/src/components/: Footer.vue  Hero.vue  LibraryTab.vue  Navbar.vue  NavbarFront.vue  QueueTab.vue  SearchInput.vue  Settings.vue  SoundryLogo.vue
frontend-vue/src/model/: api.js  download.js  search.js  settings.js
frontend-vue/src/router/: index.js
frontend-vue/src/views/: About.vue  Changelog.vue  Disclaimer.vue  DownloadsView.vue  Front.vue  NotFound.vue  Privacy.vue  Terms.vue
frontend/src/: App.tsx  config.ts  index.css  index.html  main.tsx  styles.scss  types.ts
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/src/components/: Footer.tsx  Hero.tsx  LibraryTab.tsx  Navbar.tsx  NavbarFront.tsx  QueueTab.tsx  SearchInput.tsx  SearchList.tsx  (+3 more)
prisma/: schema.prisma
prisma/data/: soundry.db  soundry.db-journal
(+33 files in other folders)
